--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=bb6887a1d34081960564b79359d1313b",
-    "/css/app.css": "/css/app.css?id=dca3b32243cd74659df7d8f5f0e266a5"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
